[新增] 活動列表

--- a/files/wireframe/styles.css
+++ b/files/wireframe/styles.css
@@ -678,7 +678,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
+  width:73px;
   height:17px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -696,7 +696,7 @@
   position:absolute;
   left:72px;
   top:246px;
-  width:44px;
+  width:73px;
   height:17px;
   font-family:'Roboto Bold', 'Roboto';
   font-weight:700;
@@ -707,7 +707,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
+  width:73px;
   white-space:nowrap;
 }
 #u47_div {
@@ -1190,7 +1190,65 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u80_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:30px;
+  height:17px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Roboto Bold', 'Roboto';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u80 {
+  position:absolute;
+  left:72px;
+  top:347px;
+  width:30px;
+  height:17px;
+  font-family:'Roboto Bold', 'Roboto';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
 #u81 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:30px;
+  white-space:nowrap;
+}
+#u82_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:28px;
+  height:30px;
+}
+#u82 {
+  position:absolute;
+  left:14px;
+  top:340px;
+  width:28px;
+  height:30px;
+}
+#u83 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:24px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u85 {
   position:absolute;
   left:1px;
   top:0px;
@@ -1198,7 +1256,7 @@
   height:26px;
   overflow:hidden;
 }
-#u81_state0 {
+#u85_state0 {
   position:absolute;
   left:0px;
   top:0px;
@@ -1210,21 +1268,21 @@
   overflow-y:hidden;
   background-image:none;
 }
-#u81_state0_content {
+#u85_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u82_img {
+#u86_img {
   position:absolute;
   left:0px;
   top:0px;
   width:364px;
   height:30px;
 }
-#u82 {
+#u86 {
   position:absolute;
   left:-1px;
   top:-1px;
@@ -1232,7 +1290,7 @@
   height:30px;
   opacity:0.150000005960464;
 }
-#u83 {
+#u87 {
   position:absolute;
   left:2px;
   top:7px;
@@ -1240,7 +1298,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u84_div {
+#u88_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -1259,7 +1317,7 @@
   font-size:14px;
   color:#FFFFFF;
 }
-#u84 {
+#u88 {
   position:absolute;
   left:686px;
   top:5px;
@@ -1271,28 +1329,28 @@
   font-size:14px;
   color:#FFFFFF;
 }
-#u85 {
+#u89 {
   position:absolute;
   left:0px;
   top:0px;
   width:29px;
   white-space:nowrap;
 }
-#u86_img {
+#u90_img {
   position:absolute;
   left:0px;
   top:0px;
   width:15px;
   height:17px;
 }
-#u86 {
+#u90 {
   position:absolute;
   left:308px;
   top:4px;
   width:15px;
   height:17px;
 }
-#u87 {
+#u91 {
   position:absolute;
   left:2px;
   top:0px;
@@ -1300,21 +1358,21 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u88_img {
+#u92_img {
   position:absolute;
   left:0px;
   top:0px;
   width:21px;
   height:24px;
 }
-#u88 {
+#u92 {
   position:absolute;
   left:264px;
   top:2px;
   width:21px;
   height:24px;
 }
-#u89 {
+#u93 {
   position:absolute;
   left:2px;
   top:4px;
@@ -1322,21 +1380,21 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u90_img {
+#u94_img {
   position:absolute;
   left:0px;
   top:0px;
   width:18px;
   height:20px;
 }
-#u90 {
+#u94 {
   position:absolute;
   left:286px;
   top:4px;
   width:18px;
   height:20px;
 }
-#u91 {
+#u95 {
   position:absolute;
   left:2px;
   top:2px;
@@ -1344,7 +1402,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u92_div {
+#u96_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -1363,7 +1421,7 @@
   font-size:14px;
   color:#FFFFFF;
 }
-#u92 {
+#u96 {
   position:absolute;
   left:327px;
   top:5px;
@@ -1375,14 +1433,14 @@
   font-size:14px;
   color:#FFFFFF;
 }
-#u93 {
+#u97 {
   position:absolute;
   left:0px;
   top:0px;
   width:29px;
   white-space:nowrap;
 }
-#u94 {
+#u98 {
   position:absolute;
   left:1px;
   top:592px;
@@ -1390,7 +1448,7 @@
   height:50px;
   overflow:hidden;
 }
-#u94_state0 {
+#u98_state0 {
   position:absolute;
   left:0px;
   top:0px;
@@ -1402,76 +1460,32 @@
   overflow-y:hidden;
   background-image:none;
 }
-#u94_state0_content {
+#u98_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u95_img {
+#u99_img {
   position:absolute;
   left:0px;
   top:0px;
   width:368px;
   height:53px;
 }
-#u95 {
+#u99 {
   position:absolute;
   left:-2px;
   top:-1px;
   width:368px;
   height:53px;
 }
-#u96 {
+#u100 {
   position:absolute;
   left:2px;
   top:18px;
   width:364px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u97_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
-}
-#u97 {
-  position:absolute;
-  left:69px;
-  top:12px;
-  width:22px;
-  height:22px;
-}
-#u98 {
-  position:absolute;
-  left:2px;
-  top:3px;
-  width:18px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u99_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:24px;
-  height:24px;
-}
-#u99 {
-  position:absolute;
-  left:168px;
-  top:12px;
-  width:24px;
-  height:24px;
-}
-#u100 {
-  position:absolute;
-  left:2px;
-  top:4px;
-  width:20px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1484,8 +1498,8 @@
 }
 #u101 {
   position:absolute;
-  left:269px;
-  top:13px;
+  left:69px;
+  top:12px;
   width:22px;
   height:22px;
 }
@@ -1497,45 +1511,25 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u94_state1 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:363px;
-  height:50px;
-  visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-}
-#u94_state1_content {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
 #u103_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:360px;
-  height:49px;
+  width:24px;
+  height:24px;
 }
 #u103 {
   position:absolute;
-  left:0px;
-  top:-1px;
-  width:360px;
-  height:49px;
+  left:168px;
+  top:12px;
+  width:24px;
+  height:24px;
 }
 #u104 {
   position:absolute;
   left:2px;
-  top:16px;
-  width:356px;
+  top:4px;
+  width:20px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1548,8 +1542,8 @@
 }
 #u105 {
   position:absolute;
-  left:69px;
-  top:12px;
+  left:269px;
+  top:13px;
   width:22px;
   height:22px;
 }
@@ -1561,25 +1555,45 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u98_state1 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:363px;
+  height:50px;
+  visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u98_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
 #u107_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:24px;
-  height:24px;
+  width:360px;
+  height:49px;
 }
 #u107 {
   position:absolute;
-  left:168px;
-  top:12px;
-  width:24px;
-  height:24px;
+  left:0px;
+  top:-1px;
+  width:360px;
+  height:49px;
 }
 #u108 {
   position:absolute;
   left:2px;
-  top:4px;
-  width:20px;
+  top:16px;
+  width:356px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1592,8 +1606,8 @@
 }
 #u109 {
   position:absolute;
-  left:269px;
-  top:13px;
+  left:69px;
+  top:12px;
   width:22px;
   height:22px;
 }
@@ -1605,7 +1619,51 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u111_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:24px;
+  height:24px;
+}
 #u111 {
+  position:absolute;
+  left:168px;
+  top:12px;
+  width:24px;
+  height:24px;
+}
+#u112 {
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:20px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u113_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:22px;
+  height:22px;
+}
+#u113 {
+  position:absolute;
+  left:269px;
+  top:13px;
+  width:22px;
+  height:22px;
+}
+#u114 {
+  position:absolute;
+  left:2px;
+  top:3px;
+  width:18px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u115 {
   position:absolute;
   left:6px;
   top:28px;
