[新增] 註冊增加大頭照

--- a/files/login/styles.css
+++ b/files/login/styles.css
@@ -298,7 +298,7 @@
   left:0px;
   top:0px;
   width:320px;
-  height:549px;
+  height:611px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -313,14 +313,14 @@
 #u138 {
   position:absolute;
   left:600px;
-  top:126px;
+  top:129px;
   width:320px;
-  height:549px;
+  height:611px;
 }
 #u139 {
   position:absolute;
   left:2px;
-  top:266px;
+  top:298px;
   width:316px;
   visibility:hidden;
   word-wrap:break-word;
@@ -330,7 +330,7 @@
   left:0px;
   top:0px;
   width:320px;
-  height:22px;
+  height:25px;
   background:inherit;
   background-color:rgba(0, 0, 0, 1);
   border:none;
@@ -344,12 +344,12 @@
   left:600px;
   top:104px;
   width:320px;
-  height:22px;
+  height:25px;
 }
 #u141 {
   position:absolute;
   left:2px;
-  top:3px;
+  top:4px;
   width:316px;
   visibility:hidden;
   word-wrap:break-word;
@@ -359,14 +359,14 @@
   left:0px;
   top:0px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u142 {
   position:absolute;
   left:850px;
   top:107px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u143 {
   position:absolute;
@@ -381,14 +381,14 @@
   left:0px;
   top:0px;
   width:12px;
-  height:15px;
+  height:17px;
 }
 #u144 {
   position:absolute;
   left:895px;
   top:107px;
   width:12px;
-  height:15px;
+  height:17px;
 }
 #u145 {
   position:absolute;
@@ -403,14 +403,14 @@
   left:0px;
   top:0px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u146 {
   position:absolute;
   left:613px;
   top:107px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u147 {
   position:absolute;
@@ -425,14 +425,14 @@
   left:0px;
   top:0px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u148 {
   position:absolute;
   left:637px;
   top:107px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u149 {
   position:absolute;
@@ -461,7 +461,7 @@
 #u150 {
   position:absolute;
   left:873px;
-  top:110px;
+  top:111px;
   width:18px;
   height:10px;
   font-size:8px;
@@ -479,14 +479,14 @@
   left:0px;
   top:0px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u152 {
   position:absolute;
   left:823px;
   top:107px;
   width:18px;
-  height:15px;
+  height:17px;
 }
 #u153 {
   position:absolute;
@@ -527,7 +527,7 @@
 #u155 {
   position:absolute;
   left:690px;
-  top:608px;
+  top:665px;
   width:140px;
   height:25px;
 }
@@ -549,7 +549,7 @@
 #u155_ann {
   position:absolute;
   left:823px;
-  top:604px;
+  top:661px;
   width:1px;
   height:1px;
 }
@@ -1115,4 +1115,139 @@
   top:0px;
   width:30px;
   white-space:nowrap;
+}
+#u193 {
+  position:absolute;
+  left:630px;
+  top:570px;
+  width:71px;
+  height:80px;
+  overflow:hidden;
+}
+#u193_state0 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:71px;
+  height:80px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u193_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u194_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:62px;
+}
+#u194 {
+  position:absolute;
+  left:4px;
+  top:7px;
+  width:62px;
+  height:62px;
+}
+#u195 {
+  position:absolute;
+  left:2px;
+  top:23px;
+  width:58px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u196_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u196 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u197 {
+  position:absolute;
+  left:2px;
+  top:30px;
+  width:66px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u193_state1 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:71px;
+  height:80px;
+  visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u193_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u198_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:62px;
+}
+#u198 {
+  position:absolute;
+  left:4px;
+  top:7px;
+  width:62px;
+  height:62px;
+}
+#u199 {
+  position:absolute;
+  left:2px;
+  top:23px;
+  width:58px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u200_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u200 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u201 {
+  position:absolute;
+  left:2px;
+  top:30px;
+  width:66px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
