[新增]推薦碼頁及推薦碼錯誤回報

--- a/data/styles.css
+++ b/data/styles.css
@@ -68,6 +68,10 @@
   color:#000000;
   text-align:left;
 }
+.text_area {
+  color:#000000;
+  text-align:left;
+}
 .droplist {
   color:#000000;
   text-align:left;
@@ -95,6 +99,8 @@
   text-align:left;
 }
 .line {
+}
+.arrow {
 }
 .heading_1 {
   font-family:'Arial Normal', 'Arial';
