--- a/files/event/styles.css
+++ b/files/event/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1250px;
+  width:1710px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -1359,5 +1359,691 @@
   left:0px;
   top:0px;
   width:129px;
+  white-space:nowrap;
+}
+#u389 {
+  position:absolute;
+  left:943px;
+  top:202px;
+}
+#u389_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u389_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u390_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:62px;
+}
+#u390 {
+  position:absolute;
+  left:4px;
+  top:7px;
+  width:62px;
+  height:62px;
+}
+#u391 {
+  position:absolute;
+  left:2px;
+  top:23px;
+  width:58px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u392_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u392 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u393 {
+  position:absolute;
+  left:2px;
+  top:30px;
+  width:66px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u389_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u389_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u394_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:62px;
+}
+#u394 {
+  position:absolute;
+  left:4px;
+  top:7px;
+  width:62px;
+  height:62px;
+}
+#u395 {
+  position:absolute;
+  left:2px;
+  top:23px;
+  width:58px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u396_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u396 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:76px;
+}
+#u397 {
+  position:absolute;
+  left:2px;
+  top:30px;
+  width:66px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u398_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:44px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u398 {
+  position:absolute;
+  left:943px;
+  top:160px;
+  width:44px;
+  height:18px;
+}
+#u399 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:44px;
+  white-space:nowrap;
+}
+#u400_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:79px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u400 {
+  position:absolute;
+  left:1036px;
+  top:202px;
+  width:79px;
+  height:18px;
+}
+#u401 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:79px;
+  white-space:nowrap;
+}
+#u402_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:44px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u402 {
+  position:absolute;
+  left:1068px;
+  top:330px;
+  width:44px;
+  height:18px;
+}
+#u403 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:44px;
+  white-space:nowrap;
+}
+#u404 {
+  position:absolute;
+  left:940px;
+  top:377px;
+  width:300px;
+  height:25px;
+}
+#u404_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:center;
+}
+#u405_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u405 {
+  position:absolute;
+  left:1097px;
+  top:600px;
+  width:140px;
+  height:40px;
+}
+#u406 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u405_ann {
+  position:absolute;
+  left:1230px;
+  top:596px;
+  width:1px;
+  height:1px;
+}
+#u407 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u408_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:549px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u408 {
+  position:absolute;
+  left:1390px;
+  top:129px;
+  width:320px;
+  height:549px;
+}
+#u409 {
+  position:absolute;
+  left:2px;
+  top:266px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u410_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:22px;
+  background:inherit;
+  background-color:rgba(0, 0, 0, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u410 {
+  position:absolute;
+  left:1390px;
+  top:107px;
+  width:320px;
+  height:22px;
+}
+#u411 {
+  position:absolute;
+  left:2px;
+  top:3px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u412_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:15px;
+}
+#u412 {
+  position:absolute;
+  left:1640px;
+  top:110px;
+  width:18px;
+  height:15px;
+}
+#u413 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:14px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u414_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:12px;
+  height:15px;
+}
+#u414 {
+  position:absolute;
+  left:1685px;
+  top:110px;
+  width:12px;
+  height:15px;
+}
+#u415 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:8px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u416_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:15px;
+}
+#u416 {
+  position:absolute;
+  left:1403px;
+  top:110px;
+  width:18px;
+  height:15px;
+}
+#u417 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:14px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u418_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:15px;
+}
+#u418 {
+  position:absolute;
+  left:1427px;
+  top:110px;
+  width:18px;
+  height:15px;
+}
+#u419 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:14px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u420_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:10px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:8px;
+  color:#BFBFBF;
+}
+#u420 {
+  position:absolute;
+  left:1663px;
+  top:113px;
+  width:18px;
+  height:10px;
+  font-size:8px;
+  color:#BFBFBF;
+}
+#u421 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  white-space:nowrap;
+}
+#u422_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:15px;
+}
+#u422 {
+  position:absolute;
+  left:1613px;
+  top:110px;
+  width:18px;
+  height:15px;
+}
+#u423 {
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:14px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u424_img {
+  position:absolute;
+  left:-2px;
+  top:-10px;
+  width:212px;
+  height:25px;
+}
+#u424 {
+  position:absolute;
+  left:1230px;
+  top:618px;
+  width:200px;
+  height:5px;
+}
+#u425 {
+  position:absolute;
+  left:2px;
+  top:-6px;
+  width:196px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u426_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:30px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u426 {
+  position:absolute;
+  left:1411px;
+  top:151px;
+  width:30px;
+  height:18px;
+}
+#u427 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:30px;
+  white-space:nowrap;
+}
+#u428 {
+  position:absolute;
+  left:1411px;
+  top:179px;
+  width:99px;
+  height:16px;
+}
+#u429 {
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u428_input {
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u430 {
+  position:absolute;
+  left:1411px;
+  top:214px;
+  width:99px;
+  height:16px;
+}
+#u431 {
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u430_input {
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u432 {
+  position:absolute;
+  left:1411px;
+  top:248px;
+  width:99px;
+  height:16px;
+}
+#u433 {
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u432_input {
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u434 {
+  position:absolute;
+  left:1411px;
+  top:288px;
+  width:99px;
+  height:16px;
+}
+#u435 {
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u434_input {
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u436 {
+  position:absolute;
+  left:1400px;
+  top:319px;
+  width:300px;
+  height:170px;
+}
+#u436_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:170px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u437_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u437 {
+  position:absolute;
+  left:1480px;
+  top:601px;
+  width:140px;
+  height:40px;
+}
+#u438 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u437_ann {
+  position:absolute;
+  left:1613px;
+  top:597px;
+  width:1px;
+  height:1px;
+}
+#u439_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:225px;
+  height:37px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u439 {
+  position:absolute;
+  left:1390px;
+  top:20px;
+  width:225px;
+  height:37px;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u440 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:225px;
   white-space:nowrap;
 }
